<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClickFragment">


    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/paints"
        android:background="@color/colorPurple"
        android:layout_alignParentTop="true"
        />

<!--    <ListView-->
<!--        android:id="@+id/listView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/myImageView"-->
<!--        android:divider="@android:color/transparent"-->
<!--        android:dividerHeight="0dp" />-->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/CreatePaintBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="20dp"

        android:src="@android:drawable/ic_input_add" />
</FrameLayout>